# kokoro

./: .gitignore  README.md  app.py  pyproject.toml
demo/: README.md  app.py  frankenstein5k.md  gatsby5k.md
examples/: device_examples.py  export.py  make_triton_compatible.py  phoneme_example.py
kokoro/: __init__.py  __main__.py  artifact.py  compile.py  config.py  custom_stft.py  exceptions.py  export_onnx.py  istftnet.py  model.py  modules.py  my_lstm.py  native_trt.py  onnx.py  onnx_export.py  pipeline.py  profile.py  runtime.py  shapes.py  trt.py  trt_builder.py  trt_compile.py  types.py
kokoro.js/: README.md  rollup.config.js
kokoro.js/demo/src/: App.jsx  worker.js
kokoro.js/src/: kokoro.js  phonemize.js  splitter.js  voices.js
kokoro.js/tests/: phonemize.test.js  splitting.test.js
kokoro/telemetry/: __init__.py  metrics.py  profiling.py  sinks.py
scripts/: check_trt.py  export_onnx.py
tests/: test_cuda_telemetry.py  test_custom_stft.py  test_istftnet_harmonics.py  test_native_trt.py  test_runtime.py  test_telemetry.py  test_trt_artifact.py  test_trt_runtime.py
