[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokoro"
version = "0.10.0"
description = "TTS"
readme = "README.md"
authors = [
    { name="hexgrad", email="hello@hexgrad.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "huggingface_hub",
    "loguru",
    "misaki[en]>=0.9.4",
    "numpy",
    "torch",
    "transformers"
]

[project.scripts]
kokoro = "kokoro.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["kokoro"]
only-packages = true

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "black>=26.5.1",
    "huggingface-hub>=1.20.1",
    "isort>=8.0.1",
    "nvidia-modelopt>=0.44.0",
    "onnxscript>=0.7.0",
    "ruff>=0.15.19",
    "torch-tensorrt>=2.12.1",
    "torchvision>=0.27.1",
]

[project.urls]
Homepage = "https://github.com/hexgrad/kokoro"
Repository = "https://github.com/hexgrad/kokoro"

[project.optional-dependencies]
trt = [
    "torch-tensorrt>=2.12.1",
]
