[build-system]
requires = ["hatchling>=1.31"]
build-backend = "hatchling.build"

[project]
name = "kokoro"
version = "0.10.0"
description = "TTS"
readme = "README.md"
authors = [
    { name="hexgrad", email="hello@hexgrad.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "cuda-python>=13.3",
    "huggingface-hub>=1.24",
    "loguru>=0.7",
    "misaki[en-sm,espeak,multilingual]>=0.11",
    "numpy>=2.4",
    "onnx>=1.22",
    "onnxscript>=0.7",
    "tensorrt>=11.1",
    "torch>=2.13",
    "torchvision>=0.28",
    "transformers>=5.14",
    "triton>=3.7",
]

[project.scripts]
kokoro = "kokoro.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["kokoro"]
only-packages = true

[tool.uv.sources]
misaki = { git = "https://github.com/perennialtech/misaki" }

[dependency-groups]
dev = [
    "basedpyright>=1.39",
    "black>=26.5",
    "isort>=8.0",
    "nvidia-modelopt>=0.45",
    "pytest>=9.1",
    "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/hexgrad/kokoro"
Repository = "https://github.com/hexgrad/kokoro"

[project.optional-dependencies]
ui = [
    "gradio>=6.20",
]
metrics = [
    "prometheus-client>=0.25",
]
